--- a/web/error404.html
+++ b/web/error404.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+    <meta charset="UTF-8" />
+    <meta name="google" content="notranslate" />
+    <meta http-equiv="Content-Language" content="en" />
     <head>
-        <title>Botterino</title>
+        <title>Botterino - 404</title>
         <link rel="stylesheet" href="/styles.css" />
     </head>
     <body>
